<resources>
    <string name="search_books">Search books..</string>
    <string name="search">Search</string>
    <string name="network_error_or_books_not_found">Network error or books found for the keyword \'%1$s\'</string>
    <string name="books_not_found">No books found for the keyword \'%1$s\'</string>
    <string name="book">Book: %1$s</string>
    <string name="book_image">Book image</string>
    <string name="title">Title</string>
    <string name="authors">Authors</string>
    <string name="book_id">Book ID</string>
    <string name="published_date">Published Date</string>
</resources>
