<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include
            layout="@layout/toolbar"
            test:layout_collapseMode="pin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                test:cardElevation="@dimen/cardview_default_elevation">

                <app.test.com.testapp.widget.CircularImageView
                    android:id="@+id/bookImage"
                    android:layout_width="@dimen/book_image_size"
                    android:layout_height="@dimen/book_image_size"
                    android:contentDescription="@string/book_image"
                    test:border="true"
                    test:border_color="@color/colorPrimary"
                    test:border_width="2dp"
                    test:selector_color="@color/colorAccent"
                    test:selector_stroke_color="@color/colorPrimaryDark"
                    test:selector_stroke_width="5dp"
                    test:shadow="true" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_half"
            android:paddingLeft="@dimen/margin_half"
            android:paddingRight="@dimen/margin_half"
            android:paddingStart="@dimen/margin_half">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:text="@string/authors"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookAuthors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:text="@string/published_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookPublishedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:text="@string/book_id"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/h1_size" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>